# Or-ai-gin

./: .gitignore  AGENTS.md  README.md  SOUL.md  pyproject.toml  start_origin_ai_lab.bat
.codex/: harness-policy.json
docs/: ai_integration.md  ai_route_design.md  architecture.md  design_principles.md  evaluation_report.md  feasibility_report.md  mvp_acceptance.md  origin_assistant_execution_plan.md  plot_accuracy_design.md  plot_modification_design.md  requirement_intake_design.md  research_assistant_product_design.md  research_intake_case_study_findings.md  roadmap.md  thermal_report_capability_design.md  thermal_simulation_design.md  visual_quality_design.md
docs/decisions/: ADR-0001-local-windows-origin-worker.md
docs/parallel_work/: BRANCH_TASKS.md  PROMPTS.md  README.md
docs/workflow/: WORKFLOW_AUDIT.template.md  (+1 more)
examples/: eval_cases.json  eval_categories.csv  eval_echem.csv  eval_grouped_bar.csv  eval_groups.csv  eval_histogram.csv  eval_many_numeric.csv  materials_battery_charge_export.csv  materials_dsc_export.tsv  materials_eis_export.csv  materials_particle_size_export.csv  materials_raman_export.txt  materials_stress_strain_export.csv  materials_tga_export.csv  materials_xrd_export.csv  modify_cases.json  route_cases.json  sample_xy.csv
scripts/: check_guardrails.py  create_research_assistant_worktrees.ps1  evaluate_intake_cases.py  evaluate_modify_cases.py  evaluate_route_cases.py  origin_smoke_test.py  qwen_smoke_test.py  setup_windows.ps1  start_web.ps1
tests/: test_thermal_vv.py  test_workflow.py
web/: app.js  index.html  styles.css
(+41 files in other folders)
